# podcasters-collector

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  shell-old.nix  shell.nix
.github/workflows/: rust-docker.yml
src/: action_cereals.rs  action_iteration.rs  action_lines.rs  action_numbers.rs  anchor_client.rs  config.rs  credentials.rs  error.rs  guess_game.rs  lib.rs  main.rs  mod.rs  printers.rs  sleepy_head.rs
tests/: test_anchor_client.rs
