[package]
name = "anchor-collector"
version = "0.0.4"
edition = "2021"
authors = ["Oto Brglez <otobrglez@gmail.com>"]

[features]
# default = ["experimental"]

[dependencies]
clap = { version = "4.0.13", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
ureq = { version = "2.5.0", features = ["json", "cookies"] }
