[package]
name = "podcasters-collector"
version = "0.0.4"
edition = "2021"
authors = ["Oto Brglez <otobrglez@gmail.com>"]

[features]
# default = ["experimental"]

[dependencies]
chrono = "0.4.24"
clap = { version = "4.1", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
ureq = { version = "2.6", features = ["json", "cookies"] }
